--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -190,7 +190,7 @@
                     <li><a routerLink="/services/ui-dev">UI Development</a></li>
                     <li><a routerLink="/services/end-to-end">End-to-End Development</a></li>
                     <li><a routerLink="/services/usability-testing">Usability Testing</a></li>
-                    <li><a href="http://uxmint.in">UX Training</a></li>
+                    <li><a href="http://uxmint.in" target="_blank">UX Training</a></li>
                   </ul>
             </div>
             <div class="col-md-6 desktop-only">
