--- a/src/app/components/enquiry-footer/enquiry-footer.component.scss
+++ b/src/app/components/enquiry-footer/enquiry-footer.component.scss
@@ -3,10 +3,10 @@
 @import "~bootstrap/scss/mixins";
 @import '../../../scss/colors';
 .footer{
-    background-color: #212121;
+    background-color: #60D6C9;
     text-align: center;
     margin-bottom: 0px;
-    color: #8D8D8D;
+    //color: #8D8D8D;
     h5{
         font-size: 24px;
         font-weight: 400;
@@ -47,7 +47,7 @@
         font-weight: 400;
         font-family: 'Noto Sans JP', sans-serif;
         background-color: #FDEE78;
-        border-color: unset;
+        // border-color: unset;
         margin-bottom: 28px;
         // span{
         //     color: #FFFFFF;
@@ -61,7 +61,7 @@
     .contacts{
         font-size: 20px;
         a{
-        color: #8D8D8D;
+        //color: #8D8D8D;
         font-size: 14px;
         font-weight: 400;
         font-family: 'Noto Sans JP', sans-serif;
