--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -195,7 +195,7 @@
 
       <div class="row service-button">
         <div class="col-md-12">
-        <a class="bttn" routerLink="/cater" >Read More</a> 
+        <button class="bttn" routerLink="/cater" >Read More</button> 
       </div>
       </div>
   </div>
