--- a/src/app/components/our-team/our-team.component.html
+++ b/src/app/components/our-team/our-team.component.html
@@ -21,7 +21,7 @@
         and innovation to school and college students which
         helps us to build a better environment.</h6>
         <div class="build-next-product-body">
-          <a class="btn btn-primary enquire" routerLink="/contact-us"><span>Join the clan</span></a>
+          <a class="btn btn-primary enquire" href="https://uxmint.design/contact-us"><span>Join the clan</span></a>
       </div>
   </div>
 </div>
