--- a/src/styles.scss
+++ b/src/styles.scss
@@ -200,10 +200,14 @@ label{
     padding-top: 60px;
     //padding-bottom: 10px;
     .bttn{
+        padding: 10px 20px;
         font-size: 12px;
         font-weight: 400;
         font-family: 'Noto Sans JP', sans-serif;
-        color: #ADADAD;
+        color: #000;
+        background-color: #60D6C9;
+        border-radius: 5px;
+        // border-color: unset;
     }
 }
 
