--- a/src/styles.scss
+++ b/src/styles.scss
@@ -199,15 +199,13 @@ label{
     text-align: center;
     padding-top: 60px;
     //padding-bottom: 10px;
-    .bttn{
+    .btn{
         padding: 10px 20px;
-        font-size: 12px;
+        font-size: 14px;
         font-weight: 400;
         font-family: 'Noto Sans JP', sans-serif;
         color: #000;
         background-color: #60D6C9;
-        border-radius: 5px;
-        // border-color: unset;
     }
 }
 
