--- a/src/app/components/pages/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/components/pages/terms-and-conditions/terms-and-conditions.component.html
@@ -6,10 +6,10 @@
                 <aside>
                     <ul>
                         <li routerLinkActive="active">
-                            <a routerLink="/terms-and-conditions"><span>TERMS AND CONDITIONS</span></a>
+                            <a routerLink="/terms-and-conditions"><span>Terms And Conditions</span></a>
                         </li>
                         <li routerLinkActive="active">
-                            <a routerLink="/privacy-policy"><span>PRIVACY POLICY</span></a>
+                            <a routerLink="/privacy-policy"><span>Privacy Policy</span></a>
                         </li>
                     </ul>
                 </aside>
