--- a/src/app/components/cater/cater.component.html
+++ b/src/app/components/cater/cater.component.html
@@ -77,7 +77,7 @@
                   </div>
             </div>
             <div class="buttn">
-                  <div class="btn">View Case Study</div>
+                  <div class="btn" routerLink="/projects/networking">View Case Study</div>
             </div>
       </div>
 </section>
@@ -192,7 +192,7 @@
                   </div>
             </div>
             <div class="buttn">
-                  <div class="btn">View Case Study</div>
+                  <div class="btn" routerLink="/projects/social-review">View Case Study</div>
             </div>
       </div>
 </section>
