--- a/css/uxmint-consulting.css
+++ b/css/uxmint-consulting.css
@@ -3596,6 +3596,9 @@ svg.bi.bi-heart{
   .container-marketing2{
     padding-bottom: 0;
   }
+  .section-footer {
+    height: 55vh;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -4214,6 +4217,9 @@ svg.bi.bi-heart{
   .image-section-interface {
     padding-bottom: 100px;
   }
+  .footer-divider-2{
+    display: none;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -4295,9 +4301,10 @@ svg.bi.bi-heart{
     grid-template-columns: 1fr 1fr;
   }
   .section-footer {
-    height: 100vh;
+    height: 115vh;
   }
   .terms-grid {
+    height: 20%;
     margin-top: 30px;
     margin-bottom: 0px;
     padding-left: 20px;
