--- a/css/uxmint-consulting.css
+++ b/css/uxmint-consulting.css
@@ -2975,7 +2975,7 @@ svg.bi.bi-heart{
   padding-top: 0px;
   padding-right: 0px;
   padding-left: 0px;
-  background-color: #000;
+  background-color: #E8492B;
   box-shadow: 1px 35px 70px 0 rgba(0, 0, 0, 0.8);
   color: #fff;
 }
