--- a/css/uxmint-consulting.css
+++ b/css/uxmint-consulting.css
@@ -3149,9 +3149,6 @@ svg.bi.bi-heart{
     -ms-flex-align: center;
     align-items: center;
   }
-  .wrapper1-2{
-    padding: 11% 1% 14% 1%;
-  }
   .text-h1 {
     font-size: 45px;
     line-height: 60px;
@@ -4583,6 +4580,9 @@ svg.bi.bi-heart{
     -ms-grid-columns: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
   }
+  .footer-divider-2{
+    display: none;
+  }
   .grid-2-column-2 {
     display: -webkit-box;
     display: -webkit-flex;
@@ -4595,9 +4595,64 @@ svg.bi.bi-heart{
     -ms-flex-direction: column;
     flex-direction: column;
   }
-  .footer-divider-2{
-    display: none;
+
+  .wrapper1-2 {
+    padding-top: 10%;
+    padding-left: 10%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
   }
+  .div-block-122 {
+    width: 85px;
+    height: 90px;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    -ms-grid-row-align: auto;
+    align-self: auto;
+  }
+  .div-block-123 {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    padding-left: 0%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+    text-align: center;
+    padding-top: 10%;
+  }
+  .cd-headline.slide .cd-words-wrapper{
+  text-align: center;
+}
 }
 
 @media screen and (max-width: 479px) {
@@ -4640,9 +4695,6 @@ svg.bi.bi-heart{
   .text-h1_1 {
     font-size: 26px;
     line-height: 37px;
-  }
-  .wrapper1-2{
-    padding: 6% 10% 10% 1%;
   }
   .image-13-sify {
     display: block;
@@ -5396,6 +5448,10 @@ svg.bi.bi-heart{
     flex-direction: column;
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
+  }
+  .div-block-122 {
+    width: 85px;
+    height: 90px;
   }
 }
 
