--- a/css/uxmint-consulting.css
+++ b/css/uxmint-consulting.css
@@ -3904,6 +3904,9 @@ svg.bi.bi-heart{
   .section-footer {
     height: 55vh;
   }
+  .wrapper1-2 {
+    padding: 15% 1% 10% 1%;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -5093,7 +5096,7 @@ svg.bi.bi-heart{
     align-items: flex-start;
     -webkit-align-self: center;
     -ms-flex-item-align: center;
-    align-self: center;
+    align-self: left;
   }
   .text-block-14 {
     -webkit-align-self: flex-start;
