--- a/css/uxmint-consulting.css
+++ b/css/uxmint-consulting.css
@@ -293,6 +293,11 @@
 
 .section-new.banner-video {
   padding-top: 40px;
+  text-align: center;
+}
+
+.video{
+  width: 1000px;
 }
 
 .section-new.about-us-quote {
@@ -3126,7 +3131,15 @@ svg.bi.bi-heart{
 .div-block-123 {
   padding-left: 5%;
 }
+@media screen and (max-width: 1366px) {
+  .video{
+    width: 800px;
+  }
+}
 @media screen and (max-width: 991px) {
+  .video{
+    width: 600px;
+  }
   .wrapper {
     padding-right: 60px;
     padding-left: 60px;
@@ -3910,6 +3923,9 @@ svg.bi.bi-heart{
 }
 
 @media screen and (max-width: 767px) {
+  .video{
+    width: 300px;
+  }
   .wrapper {
     padding-right: 40px;
     padding-left: 40px;
