--- a/css/uxmint-consulting.css
+++ b/css/uxmint-consulting.css
@@ -297,7 +297,7 @@
 }
 
 .video{
-  width: 1000px;
+  width: auto;
 }
 
 .section-new.about-us-quote {
@@ -1975,6 +1975,10 @@ svg.bi.bi-heart{
 .image-section {
   height: auto;
   min-width: 100%;
+}
+
+.image-section-responsive{
+  display: none;
 }
 
 .image-section-interface {
@@ -3935,7 +3939,7 @@ svg.bi.bi-heart{
     padding-left: 10%;
   }
   .wrapper1-2{
-    padding: 15% 10% 10% 10%;
+    padding: 15% 10% 30% 30%;
   }
   .wrapper.services-definition {
     -webkit-box-orient: vertical;
@@ -4616,7 +4620,7 @@ svg.bi.bi-heart{
   }
 
   .wrapper1-2 {
-    padding-top: 10%;
+    padding-top: 30%;
     padding-left: 10%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -4627,10 +4631,10 @@ svg.bi.bi-heart{
     -webkit-justify-content: flex-start;
     -ms-flex-pack: start;
     justify-content: flex-start;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
+    -webkit-box-align: left;
+    -webkit-align-items: left;
+    -ms-flex-align: left;
+    align-items: left;
   }
   .div-block-122 {
     width: 85px;
@@ -4659,18 +4663,18 @@ svg.bi.bi-heart{
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
+    -webkit-box-align: left;
+    -webkit-align-items: left;
+    -ms-flex-align: left;
+    align-items: left;
     -webkit-align-self: auto;
     -ms-flex-item-align: auto;
     align-self: auto;
-    text-align: center;
+    text-align: left;
     padding-top: 10%;
   }
   .cd-headline.slide .cd-words-wrapper{
-  text-align: center;
+  text-align: left;
 }
 }
 
@@ -4734,8 +4738,8 @@ svg.bi.bi-heart{
     text-align: left;
   }
   .section-new {
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-top: 80px;
+    padding-bottom: 80px;
   }
   .section-new.team {
     padding-top: 40px;
@@ -5225,6 +5229,12 @@ svg.bi.bi-heart{
     padding-top: 0px;
     font-size: 20px;
     line-height: 25px;
+  }
+  .image-section{
+    display: none;
+  }
+  .image-section-responsive{
+    display: block;
   }
   .image-11 {
     max-width: 100%;
