service UI changes

--- a/css/uxmint-consulting.css
+++ b/css/uxmint-consulting.css
@@ -3134,6 +3134,281 @@ svg.bi.bi-heart{
 .div-block-123 {
   padding-left: 5%;
 }
+
+
+.section-new-5 {
+  height: auto;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  font-family: Inter, sans-serif;
+}
+
+
+.tab-link {
+  background-color: #000;
+  color: #666;
+  font-size: 22px;
+}
+
+.tab-link.w--current {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #000;
+  color: #fff;
+  font-weight: 500;
+  text-align: left;
+}
+
+.wrapper-5 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  max-width: 1300px;
+  padding-right: 100px;
+  padding-left: 100px;
+}
+
+.wrapper-5.hero {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding-right: 10%;
+  padding-left: 10%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+}
+
+.wrapper-5.services {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+}
+
+.icon {
+  display: block;
+  margin-top: 0px;
+  padding-left: 0px;
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
+  background-color: transparent;
+  color: #fff;
+}
+
+.services-grid-icon {
+  margin-top: 30px;
+  margin-bottom: 15px;
+}
+
+.services-type {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 50%;
+  padding-right: 40px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-align-self: flex-start;
+  -ms-flex-item-align: start;
+  align-self: flex-start;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+}
+
+.services-type.column-2 {
+  width: 50%;
+  margin-left: 0px;
+  padding-right: 0px;
+}
+
+.services-block1 {
+  width: 172.3125px;
+  height: 178px;
+  padding: 25px;
+  background-color: #f4f1e7;
+}
+
+.services-block1:active {
+  margin-top: 0px;
+  color: #fff;
+}
+
+.services-block1:focus {
+  margin-top: 0px;
+  background-color: #f4f1e7;
+  color: #fff;
+}
+
+.text-h5-grey-3 {
+  font-family: Inter, sans-serif;
+  color: #776f3d;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.grid-services-type {
+  -ms-grid-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.html-embed-3 {
+  margin-top: 30px;
+  margin-bottom: 15px;
+}
+
+.tabs-6 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+.tab-link-3 {
+  width: 170px;
+  height: 180px;
+  margin-right: 0px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  padding: 25px;
+  background-color: #f4f1e7;
+  color: #776f3d;
+  font-size: 16px;
+}
+
+.tab-link-3.w--current {
+  width: 170px;
+  height: 180px;
+  margin-top: -30px;
+  background-color: #fa4e2e;
+  box-shadow: 0 30px 40px 3px rgba(0, 0, 0, 0.45);
+  color: #fff;
+}
+
+.tabs-menu-9 {
+  display: block;
+  margin-left: 0%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+}
+
+.tabs-content-3 {
+  width: auto;
+  margin-left: -100%;
+}
+
+.grid-2-column-3 {
+  -ms-grid-rows: auto;
+  grid-template-rows: auto;
+}
+
+.wrapper-6 {
+  height: 100%;
+  max-width: 1300px;
+  padding-right: 100px;
+  padding-left: 100px;
+}
+
+.wrapper-6.services {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+}
+
+.section-new-4 {
+  display: none;
+  height: auto;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  font-family: Inter, sans-serif;
+}
+
+.services-type-2 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 50%;
+  padding-right: 40px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+}
+
+.services-type-2.column-2 {
+  padding-right: 0px;
+}
+
+.services-block {
+  width: 172.3125px;
+  height: 178px;
+  padding: 25px;
+  background-color: #f4f1e7;
+}
+
+.grid-services-type-2 {
+  -ms-grid-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+
 @media screen and (max-width: 1366px) {
   .video{
     width: 800px;
@@ -3923,6 +4198,72 @@ svg.bi.bi-heart{
   .wrapper1-2 {
     padding: 15% 1% 10% 1%;
   }
+
+  .section-new-5 {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
+  .wrapper-5 {
+    padding-right: 60px;
+    padding-left: 60px;
+  }
+  .wrapper-5.services {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+
+  .services-type {
+    width: 50%;
+    margin-top: 40px;
+    padding-right: 0px;
+  }
+  .html-embed-3 {
+    margin-top: 20px;
+  }
+  .tab-link-3 {
+    width: 150px;
+    height: 150px;
+    margin-left: 10px;
+    padding: 15px;
+  }
+  .tab-link-3.w--current {
+    width: 150px;
+    height: 150px;
+    padding: 15px;
+  }
+  .wrapper-6 {
+    padding-right: 60px;
+    padding-left: 60px;
+  }
+  .wrapper-6.services {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+  .section-new-4 {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  .services-type-2 {
+    width: 90%;
+    margin-top: 40px;
+    padding-right: 0px;
+  }
+
 }
 
 @media screen and (max-width: 767px) {
@@ -4675,6 +5016,132 @@ svg.bi.bi-heart{
   .cd-headline.slide .cd-words-wrapper{
   text-align: left;
 }
+
+.section-new-5 {
+  display: none;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.wrapper-5 {
+  padding-right: 40px;
+  padding-left: 40px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+}
+.wrapper-5.hero {
+  padding-right: 10%;
+  padding-left: 10%;
+}
+.services-type {
+  width: 40%;
+}
+.services-type.column-2 {
+  width: 60%;
+}
+.text-h5-grey-3 {
+  font-size: 14px;
+}
+.grid-services-type {
+  -ms-grid-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+}
+.tab-link-3 {
+  width: 100%;
+  height: 49%;
+  margin-bottom: 5px;
+  margin-left: 5px;
+}
+.tab-link-3.w--current {
+  width: 47%;
+  height: 49%;
+  margin-right: 10px;
+  margin-left: 0px;
+}
+.tabs-menu-9 {
+  margin-left: 0px;
+  -webkit-align-self: auto;
+  -ms-flex-item-align: auto;
+  -ms-grid-row-align: auto;
+  align-self: auto;
+}
+.tabs-content-3 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: -70%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+.icon-services-2 {
+  width: 25px;
+}
+.grid-2-column-3 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 40px;
+  margin-bottom: 0px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+.wrapper-6 {
+  padding-right: 40px;
+  padding-left: 40px;
+}
+.section-new-4 {
+  display: block;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+.services-type-2 {
+  width: 100%;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+.services-type-2.column-2 {
+  width: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.services-block {
+  width: auto;
+  height: auto;
+  padding: 20px;
+  text-decoration: none;
+}
+.grid-services-type-2 {
+  justify-items: stretch;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+  -ms-grid-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
 }
 
 @media screen and (max-width: 479px) {
@@ -5480,6 +5947,137 @@ svg.bi.bi-heart{
   .div-block-122 {
     width: 85px;
     height: 90px;
+  }
+  .section-new-5 {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  .wrapper-5 {
+    padding-right: 20px;
+    padding-left: 20px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+  .wrapper-5.hero {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+
+  .services-grid-icon {
+    margin-top: 0px;
+  }
+  .services-type {
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+  }
+  .services-type.column-2 {
+    width: 100%;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    -ms-grid-row-align: auto;
+    align-self: auto;
+  }
+  .services-block1 {
+    width: auto;
+    height: auto;
+  }
+  .grid-services-type {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
+  .tab-link-3 {
+    width: 100%;
+    margin-left: 0px;
+    padding-bottom: 30px;
+    padding-left: 30px;
+  }
+  .tab-link-3.w--current {
+    width: 100%;
+    height: 50%;
+    margin-right: 10px;
+    padding-bottom: 30px;
+    padding-left: 30px;
+  }
+  .tabs-menu-9 {
+    display: block;
+  }
+  .tabs-content-3 {
+    margin-left: 0%;
+  }
+  .tab-pane-tab-1 {
+    margin-top: 0px;
+  }
+  .grid-2-column-3 {
+    margin-bottom: 0px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
+  .wrapper-6 {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+  .section-new-4 {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  .services-type-2 {
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+  }
+  .services-block {
+    width: auto;
+    height: auto;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+  .grid-services-type-2 {
+    display: -ms-grid;
+    display: grid;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 auto;
+    -ms-flex: 0 auto;
+    flex: 0 auto;
+    grid-auto-flow: row;
+    grid-auto-columns: 1fr;
+    grid-column-gap: 16px;
+    grid-row-gap: 16px;
+    -ms-grid-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: auto auto;
+    grid-template-rows: auto auto;
   }
 }
 
