--- a/css/uxmint-consulting.css
+++ b/css/uxmint-consulting.css
@@ -3374,6 +3374,7 @@ svg.bi.bi-heart{
   font-weight: 600;
   letter-spacing: 2px;
   text-transform: uppercase;
+  margin-left: 3px;
 }
 .tab-link {
   background-color: #000;
